added footer and media queries

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -348,6 +348,108 @@ img{
 
 
 /* FOOTER */
+.footer{
+    background-color: var(--second-color);
+    color: #fff;
+    text-align: center;
+    font-weight: var(--font-semi);
+    padding: 2rem 0;
+}
+.footer__title{
+    font-size: 2rem;
+    margin-bottom: var(--mb-4);
+}
+.footer__social{
+    margin-bottom: var(--mb-4);
+}
+.footer__icon{
+    font-size: 1.5rem;
+    color: #fff;
+    margin: 0 var(--mb-2);
+}
 
 
 /* MEDIA QUERIES */
+@media screen and (min-width: 768px) {
+    body{
+        margin: 4rem;
+    }
+    .section{
+        padding-top: 4rem;
+        padding-bottom: 3rem;
+    }
+    .section-title{
+        margin-bottom: var(--mb-6);
+    }
+    .section-title::after{
+        width: 80px;
+        top: 3rem;
+    }
+    .nav{
+        height: calc(var(--header-height) + 1rem);
+    }
+    .nav__list{
+        display: flex;
+        padding-top: 0;
+    }
+    .nav__item{
+        margin-left: var(--mb-6);
+        margin-bottom: 0;
+    }
+    .nav__toggle{
+        display: none;
+    }
+    .nav__link{
+        color: var(--second-color);
+    }
+    .home{
+        height: 100vh;
+    }
+    .home__data{
+        align-self: flex-end;
+    }
+    .home__social{
+        padding-top: 0;
+        padding-bottom: 2.5rem;
+        flex-direction: row;
+        align-self: flex-end;
+    }
+    .home__social-icon{
+        margin-bottom: 0;
+        margin-right: var(--mb-4);
+    }
+    .home__img{
+        width: 457px;
+        bottom: 15%;
+    }
+    .about__container, .skills__container{
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        text-align: initial;
+    }
+    .about__img img{
+        width: 300px;
+    }
+    .work__container{
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+    .contact__form{
+        width: 360px;
+    }
+    .contact__container{
+        justify-items: center;
+    }
+    
+}
+
+@media screen and (min-width: 1024px) {
+    .bd-grid{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .home__img{
+        right: 10%;
+    }
+}
