--- a/Dark/assets/css/styles.css
+++ b/Dark/assets/css/styles.css
@@ -93,3 +93,107 @@ img {
   margin-bottom: var(--mb-4);
   text-align: center;
 }
+
+.section-title::after {
+  position: absolute;
+  content: '';
+  width: 64px;
+  height: 0.18rem;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 2rem;
+  background-color: var(--first-color);
+}
+
+.section {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+}
+
+/* LAYOUT */
+.bd-grid {
+  max-width: 1024px;
+  display: grid;
+  /* grid-template-columns: 100%;
+    grid-column-gap: 2rem; */
+  margin-left: var(--mb-2);
+  margin-right: var(--mb-2);
+}
+
+.l-header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  background-color: var(--dark-1);
+  color: var(--white);
+  box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
+}
+
+/* NAV */
+.nav {
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--white);
+  background-color: var(--dark-1);
+  font-weight: var(--font-semi);
+}
+
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    top: var(--header-height);
+    right: -100%;
+    width: 80%;
+    height: 100%;
+    padding: 2rem;
+    background-color: var(--dark-1);
+    color: var(--white);
+    transition: .5s;
+  }
+}
+
+.nav__item {
+  margin-bottom: var(--mb-4);
+  color: var(--white);
+}
+
+.nav__link {
+  position: relative;
+  color: var(--white);
+}
+
+.nav__link:hover {
+  position: relative;
+  color: var(--grey);
+}
+
+.nav__link:hover::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 0.18rem;
+  left: 0;
+  top: 2rem;
+  background-color: var(--first-color);
+  /* color: var(--white); */
+}
+
+.nav__logo {
+  color: var(--white);
+}
+
+.nav__logo img{
+  width: 80px;
+  height: 80px;
+}
+
+.nav__toggle {
+  color: var(--white);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
