--- a/Dark/assets/css/styles.css
+++ b/Dark/assets/css/styles.css
@@ -197,3 +197,54 @@ img {
   font-size: 1.5rem;
   cursor: pointer;
 }
+
+/*Active menu*/
+.active::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 0.18rem;
+  left: 0;
+  top: 2rem;
+  background-color: var(--first-color);
+  color: var(--white);
+}
+
+/* Show Menu */
+.show {
+  right: 0;
+}
+
+/* HOME */
+.home {
+  position: relative;
+  row-gap: 5rem;
+  padding: 4rem 0 5rem;
+}
+
+.home__data {
+  align-self: center;
+}
+
+.home__title {
+  font-size: var(--big-font-size);
+  color: var(--white);
+  margin-bottom: var(--mb-5);
+}
+
+.home__title-color {
+  color: var(--first-color);
+}
+
+.home__social {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.home__social-icon {
+  width: max-content;
+  margin-bottom: var(--mb-2);
+  font-size: 1.5rem;
+  color: var(--white);
+}
