--- a/Dark/assets/css/styles.css
+++ b/Dark/assets/css/styles.css
@@ -248,3 +248,53 @@ img {
   font-size: 1.5rem;
   color: var(--white);
 }
+
+.home__social-icon:hover {
+  color: var(--first-color);
+}
+
+.home__img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 260px;
+}
+
+.home__blob {
+  fill: var(--first-color);
+}
+
+.home__blob-img {
+  width: 380px;
+}
+
+/* Buttons */
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: .75rem 2.5rem;
+  font-weight: var(--font-semi);
+  border-radius: .5rem;
+  transition: .3s;
+}
+
+.button:hover {
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
+/* ABOUT */
+.about__container {
+  row-gap: 2rem;
+  text-align: center;
+  color: var(--white);
+}
+
+.about__subtitle {
+  margin-bottom: var(--mb-2);
+
+}
+
+.about__img {
+  justify-self: center;
+}
