--- a/Dark/assets/css/styles.css
+++ b/Dark/assets/css/styles.css
@@ -553,3 +553,16 @@ img {
     column-gap: 2rem;
   }
 }
+
+@media screen and (min-width: 992px) {
+  .bd-grid {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .home {
+    padding: 10rem 0 2rem;
+  }
+  .home__img {
+    width: 450px;
+  }
+}
