--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,16 +1,20 @@
 /* GOOGLE FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Smooch+Sans:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Limelight&family=Poppins:ital,wght@0,300;0,600;0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barrio&family=Limelight&family=Poppins:ital,wght@0,300;0,600;0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
 
 /*  VARIABLES CSS  */
 :root {
   --header-height: 3rem;
   --font-semi: 600;
-
   /*  Colours  */
-  /* HSL color mode */
-  --hue-color: 197;
-  --first-color: hsl(var(--hue-color), 100%, 50%);
-  --second-color: hsl(var(--hue-color), 56%, 12%);
+  /* HEX color mode */
+  --first-color: #20b2c5;
+  --second-color: #0d2c30;
+  --text: #000;
+  --text-light: #fff;
+  --text-hover: #eeeee;
+  --background: #fff;
   /* Typography */
   --body-font: 'Roboto', sans-serif;
   --big-font-size: 2rem;
@@ -29,6 +33,28 @@
   --z-normal: 1;
   --z-tooptip: 10;
   --z-fixed: 100;
+}
+
+[data-theme="light"] {
+   /* HEX color mode */
+  --first-color: #20b2c5;
+  --second-color: #0d2c30;
+  --text: #000;
+  --text-light: #fff;
+  --text-hover: #eeeee;
+  --background: #fff;
+}
+
+[data-theme="dark"] {
+   /* HEX color mode */
+  --first-color: #20b2c5;
+  /* --second-color: #0d2c30; */
+  --second-color: #06505f;
+  --text: #fff;
+  --text-light: #fff;
+  --text-hover: #000;
+  /* --background: #27496D; #0e356b; */
+  --background: #0a4750;
 }
 
 @media screen and (min-width: 968px) {
@@ -53,21 +79,25 @@ body {
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  color: var(--second-color);
+  color: var(--text);
+  background-color: var(--background);
 }
 
 h1, h2, p {
   margin: 0;
+  color: var(--text);
 }
 
 ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  color: var(--text);
 }
 
 a {
   text-decoration: none;
+  color: var(--text);
 }
 
 img {
@@ -119,7 +149,8 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: #fff;
+  background-color: var(--background);
+  color: var(--text);
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
 }
 
@@ -129,6 +160,8 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--background);
+  color: var(--text-light);
   font-weight: var(--font-semi);
 }
 
@@ -151,11 +184,12 @@ img {
 
 .nav__link {
   position: relative;
-  color: #fff;
+  color: var(--text-light);
 }
 
 .nav__link:hover {
   position: relative;
+  color: var(--text);
 }
 
 .nav__link:hover::after {
@@ -169,7 +203,11 @@ img {
 }
 
 .nav__logo {
-  color: var(--second-color);
+  /* color: var(--second-color); */
+  color: var(--text-light);
+  font-family: 'Limelight', cursive;
+  font-size: 1.8em;
+  font-weight: 500;
 }
 
 .nav__logo img{
@@ -178,7 +216,8 @@ img {
 }
 
 .nav__toggle {
-  color: var(--second-color);
+  color: var(--text);
+  /* color: var(--text-light); */
   font-size: 1.5rem;
   cursor: pointer;
 }
@@ -213,6 +252,7 @@ img {
 .home__title {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-5);
+  color: var(--text);
 }
 
 .home__title-color {
@@ -222,13 +262,14 @@ img {
 .home__social {
   display: flex;
   flex-direction: column;
+  color: var(--text);
 }
 
 .home__social-icon {
   width: max-content;
   margin-bottom: var(--mb-2);
   font-size: 1.5rem;
-  color: var(--second-color);
+  color: var(--text);
 }
 
 .home__social-icon:hover {
@@ -247,14 +288,14 @@ img {
 }
 
 .home__blob-img {
-  width: 360px;
+  width: 380px;
 }
 
 /* Buttons */
 .button {
   display: inline-block;
   background-color: var(--first-color);
-  color: #fff;
+  color: var(--text-light);
   padding: .75rem 2.5rem;
   font-weight: var(--font-semi);
   border-radius: .5rem;
@@ -262,13 +303,14 @@ img {
 }
 
 .button:hover {
-  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 4px var(--text);
 }
 
 /* ABOUT */
 .about__container {
   row-gap: 2rem;
   text-align: center;
+  color: var(--text);
 }
 
 .about__subtitle {
@@ -288,6 +330,7 @@ img {
 .skills__container {
   row-gap: 2rem;
   text-align: center;
+  /* color: var(--text); */
 }
 
 .skills__subtitle {
@@ -307,7 +350,10 @@ img {
   padding: .5rem 1rem;
   margin-bottom: var(--mb-4);
   border-radius: .5rem;
-  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
+  color: #000;
+  background-color: var(--text-light);
+  /* box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15); */
+  box-shadow: 0px 0.5px 10px var(--text);
 }
 
 .skills__icon {
@@ -319,6 +365,7 @@ img {
 .skills__names {
   display: flex;
   align-items: center;
+  /* color: #000; */
 }
 
 .skills__bar {
@@ -354,26 +401,32 @@ img {
   border-radius: .5rem;
 }
 
-/* WORK */
-.work__container {
+/* PROJECT */
+.project__container {
   row-gap: 2rem;
+  color: var(--text);
 }
 
-.work__img {
-  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
+.project__img {
+  /* box-shadow: 0px 4px 25px var(--text); */
+  box-shadow: 0px 0.5px 10px var(--text);
   border-radius: .5rem;
   overflow: hidden;
 }
 
-.work__img img {
+.project__img img {
   transition: 1s;
 }
 
-.work__img img:hover {
+.project__img img:hover {
   transform: scale(1.1);
 }
 
 /* CONTACT */
+.contact__container {
+  color: var(--text);
+}
+
 .contact__input {
   width: 100%;
   font-size: var(--normal-font-size);
@@ -397,29 +450,37 @@ img {
 /* FOOTER */
 .footer {
   background-color: var(--second-color);
-  color: #fff;
+  /* color: var(--text-light); */
+  /* color: #fff; */
   text-align: center;
   font-weight: var(--font-semi);
   padding: 2rem 0;
 }
 
 .footer__title {
+  font-family: 'Barrio', cursive;
   font-size: 2rem;
+  color: var(--text-light);
   margin-bottom: var(--mb-4);
 }
 
 .footer__social {
   margin-bottom: var(--mb-4);
+  color: var(--text-light);
 }
 
 .footer__icon {
   font-size: 1.5rem;
-  color: #fff;
+  color: var(--text-light);
   margin: 0 var(--mb-2);
+}
+.footer__icon:hover {
+  color: var(--first-color);
 }
 
 .footer__copy {
   font-size: var(--smaller-font-size);
+  color: var(--text-light);
 }
 
 /* MEDIA QUERIES */
@@ -435,6 +496,7 @@ img {
 @media screen and (min-width: 576px) {
   .home {
     padding: 4rem 0 2rem;
+    color: var(--text);
   }
   .home__social {
     padding-top: 0;
@@ -444,6 +506,7 @@ img {
   }
   .home__social-icon {
     margin-bottom: 0;
+    color: var(--text);
     margin-right: var(--mb-4);
   }
   .home__img {
@@ -454,16 +517,19 @@ img {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     text-align: initial;
+    color: var(--text);
   }
   .skills__container {
     grid-template-columns: .7fr;
     justify-content: center;
     column-gap: 1rem;
+    color: var(--text);
   }
-  .work__container {
+  .project__container {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2rem;
     padding-top: 2rem;
+    color: var(--text);
   }
   .contact__form {
     width: 360px;
@@ -471,6 +537,7 @@ img {
   }
   .contact__container {
     justify-items: center;
+    color: var(--text);
   }
 }
 
@@ -502,9 +569,12 @@ img {
   }
   .nav__toggle {
     display: none;
+    color: var(--text);
   }
   .nav__link {
-    color: var(--second-color);
+    /* color: var(--second-color); */
+    color: var(--text);
+
   }
   .home {
     padding: 8rem 0 2rem;
@@ -525,7 +595,7 @@ img {
     align-items: center;
     text-align: initial;
   }
-  .work__container {
+  .project__container {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 2rem;
   }
@@ -542,4 +612,68 @@ img {
   .home__img {
     width: 450px;
   }
+}
+
+
+.theme-switch-wrapper {
+  /* display: flex; */
+  align-items: center;
+  margin-left: 5px;
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 23px;
+  position: relative;
+  width: 56px;
+}
+
+.theme-switch input {
+  display:none;
+  margin-bottom: 15px;
+  margin-top: 30px;
+}
+
+.slider {
+  background-color: #ccc;
+  /* margin-top: 5px; */
+  /* margin-bottom: 25px; */
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 40px;
+  transition: .4s;
+  /* margin-right: 10px; */
+}
+
+.slider:before {
+  background-color: #fff;
+  margin-top: 45px;
+  bottom: 4px;
+  content: " ";
+  height: 15px;
+  left: 2px;
+  position: absolute;
+  transition: .4s;
+  width: 15px;
+}
+
+input:checked + .slider {
+  background-color: var(--first-color);
+  /* background-color: #fff; */
+}
+
+input:checked + .slider:before {
+  transform: translateX(20px);
+}
+
+.slider.round {
+  border-radius: 25px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
