--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -651,7 +651,7 @@ img {
 
 .slider:before {
   background-color: #fff;
-  margin-top: 45px;
+  /* margin-top: 45px; */
   bottom: 4px;
   content: " ";
   height: 15px;
@@ -667,7 +667,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-  transform: translateX(20px);
+  transform: translateX(21px);
 }
 
 .slider.round {
